Add support for Read/Write access to the IS/STAG Oracle Demo database